# Reflexive

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FAILURES.md  PYTHON_SDK_ANNOUNCEMENT.md  README.md  cd  demo-ai-features.js  demo-app.js  demo-inject.js  demo-instrumented.js  eslint.config.js  package-lock.json  package.json  railway.json  reflexive.config.example.js  tsconfig.build.json  tsconfig.json  vitest.config.ts
dashboard/: .npmignore  next.config.ts  package-lock.json  package.json
demos/: basic-server.js  injection-test.js  task-queue.js
dev-docs/: SANDBOX-IMPLEMENTATION-PLAN.md  TODO.md
docs/: BREAKPOINT-AUDIT.md  GENESIS.md  HN-LAUNCH-PLAN-V2.md  HN-LAUNCH-PLAN.md  README.md  TODO.md  V8-INSPECTOR-RESEARCH.md  api-reference.md  deployment.md  developer-guide.md  getting-started.md  index.md  python-sdk.md  user-guide.md
python-sdk/: ARCHITECTURE.md  CLEANUP_DONE.md  COMPARISON.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SUMMARY.md  pyproject.toml  setup.py  test_basic.py
python-sdk/examples/: README.md  data_pipeline.py  simple_app.py  web_server.py
python-sdk/reflexive/: __init__.py  app_state.py  core.py  types.py
python-sdk/reflexive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: cli.ts  index.js  index.ts  inject.cjs  package.json  reflexive.js
src/__tests__/: setup.ts
src/adapters/: dap-adapter.ts  index.ts  v8-inspector-adapter.ts
src/api/: auth.ts  routes.ts
src/core/: app-state.ts  chat-stream.ts  config-loader.ts  dashboard.ts  http-server.ts
src/mcp/: cli-tools.ts  tools.ts  (+4 more)
(+57 files in other folders)
